--- a/package.json
+++ b/package.json
@@ -2,10 +2,27 @@
   "name": "coursebundler",
   "version": "1.0.0",
   "description": "Course Bundler by Koushik Dutta (6 Pack Programmer)",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon server.js"
   },
   "author": "Koushik Dutta",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cloudinary": "^1.36.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "datauri": "^4.1.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.1.0",
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.2",
+    "nodemailer": "^6.9.1",
+    "razorpay": "^2.8.6",
+    "validator": "^13.9.0"
+  }
 }
